--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,13 @@
-include.path=${php.global.include.path}
+auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
+file.reference.___APP-DEV-ci-autocomplete=../ci-autocomplete
+include.path=\
+    ${php.global.include.path}:\
+    ${file.reference.___APP-DEV-ci-autocomplete}
 php.version=PHP_54
 source.encoding=UTF-8
 src.dir=.
